# MadEvolve

./: .gitignore  README.md  pyproject.toml
madevolve/: __init__.py  __main__.py  branding.py  logo.py
madevolve/analyzer/: __init__.py  base.py  core.py  generate_report.py  llm_core.py
madevolve/common/: __init__.py  constants.py  helpers.py
madevolve/engine/: __init__.py  configuration.py  container.py  orchestrator.py  session.py
madevolve/executor/: __init__.py  dispatcher.py  settings.py
madevolve/executor/runners/: __init__.py  cluster.py  native.py
madevolve/provider/: __init__.py  connector.py  dispatch.py  gateway.py  vectorizer.py
madevolve/provider/adapters/: __init__.py  anthropic_adapter.py  deepseek_adapter.py  gemini_adapter.py  openai_adapter.py  response.py  tariff.py
madevolve/provider/strategy/: __init__.py  allocation.py
madevolve/repository/: __init__.py  decorators.py
madevolve/repository/analytics/: __init__.py  metrics.py  visualization.py
madevolve/repository/selection/: __init__.py  ancestry.py  context.py
madevolve/repository/storage/: __init__.py  artifact_store.py  schema.py
madevolve/repository/topology/: __init__.py  features.py  partitions.py
madevolve/synthesizer/: __init__.py  composer.py
madevolve/templates/: __init__.py  bootstrap.py  differential.py  foundation.py  holistic.py  hybrid.py  insight.py
madevolve/transformer/: __init__.py  blocks.py  changeset.py  parallel.py  patcher.py  rewriter.py
